Refacotred Report Generating Code and Divided it into Multiple Files Efficiently